# SmartReflectServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DaemonCom/: CMakeLists.txt  Makefile  mmcom.c  socketResponse.c  socketResponse.h
DockerScripts/: Dockerfile  docker-entrypoint.sh  start_container.sh
PluginDaemon/: CMakeLists.txt  Makefile
PluginDaemon/cmake/: FindLibUUID.cmake
PluginDaemon/includes/: btree.h  configReader.h  display.h  hashtable.h  misc.h  plugin.h  pluginComLib.h  pluginLoader.h  pluginSocket.h  protocolWrite.h  scheduler.h  scripts.h  socketResponse.h
PluginDaemon/includes/api/: api.h  apiPending.h  apiResponse.h
PluginDaemon/source/: btree.c  configReader.c  display.c  hashtable.c  main.c  misc.c  pluginComLib.c  pluginSocket.c  protocolWrite.c  scheduler.c  scripts.c  socketResponse.c
PluginDaemon/source/api/: api.c  apiPending.c  apiResponse.c
PluginDaemon/source/plugins/: plugin.c  pluginConf.c  pluginList.c  pluginLoader.c  pluginSchedule.c
PluginDaemon/web/Plugins/AsciiWeather/: Weather.css  Weather.html  plugin.conf
PluginDaemon/web/Plugins/Cowsay/: cowsay plug.sh  cowsay.css  plugin.conf
PluginDaemon/web/Plugins/IPAddr/: ipaddr.css  ipaddr.html  ipaddr.sh  plugin.conf
PluginDaemon/web/Plugins/JSClock1/: jsclock.html  jsclock1.css  jsclock1.js  plugin.conf
PluginDaemon/web/Plugins/JSClock1/gui/: config.html
PluginDaemon/web/Plugins/SquareMove/: Makefile  build.sh  move.c  plugin.conf  squaremove.css  squaremove.html
PluginDaemon/web/Plugins/SysInfo/: plugin.conf  sysinfo.css  sysinfo.sh
PluginDaemon/web/Plugins/Test/: Test.css  Test.html  plugin.conf  test2.html
PluginDaemon/web/Plugins/Test2/: Test.css  Test.sh  plugin.conf
PluginDaemon/web/api/: mirrorAPI.js  moveMenu.css  moveMenu.js
PluginDaemon/web/com/: display.js  plugin-client.js
PluginDaemon/web/css/: index.css
PluginDaemon/web/webgui/: gui.html
PluginDaemon/web/webgui/css/: webgui.css
PluginDaemon/web/webgui/js/: webgui.js
